--- a/olympics.html
+++ b/olympics.html
@@ -253,7 +253,7 @@
 <td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Figure Skating, Freestyle Skiing, Alpine Skiing: Primetime in Milan (NBC)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Figure Skating, Freestyle Skiing, Alpine Skiing (NBC)</a></td>
 <td>February 09, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
 </tr>
