--- a/nba.html
+++ b/nba.html
@@ -143,56 +143,140 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         New York Knicks vs Boston Celtics
+         Detroit Pistons vs Charlotte Hornets
         </a>
        </td>
        <td>
-        February 08, 2026 9:30 AM
+        February 09, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 09, 2026 9:30 AM:00" data-start="February 08, 2026 9:30 AM:00">
+        <span class="countdown-timer" data-end="February 10, 2026 4:00 PM:00" data-start="February 09, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Miami Heat vs Washington Wizards
+         Chicago Bulls vs Brooklyn Nets
         </a>
        </td>
        <td>
-        February 08, 2026 11:00 AM
+        February 09, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 09, 2026 11:00 AM:00" data-start="February 08, 2026 11:00 AM:00">
+        <span class="countdown-timer" data-end="February 10, 2026 4:30 PM:00" data-start="February 09, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Indiana Pacers vs Toronto Raptors
+         Utah Jazz vs Miami Heat
         </a>
        </td>
        <td>
-        February 08, 2026 12:00 PM
+        February 09, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 09, 2026 12:00 PM:00" data-start="February 08, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="February 10, 2026 4:30 PM:00" data-start="February 09, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-4">
-         Los Angeles Clippers vs Minnesota Timberwolves
+         Milwaukee Bucks vs Orlando Magic
         </a>
        </td>
        <td>
-        February 08, 2026 12:00 PM
+        February 09, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 09, 2026 12:00 PM:00" data-start="February 08, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="February 10, 2026 4:30 PM:00" data-start="February 09, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Atlanta Hawks vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        February 09, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 5:00 PM:00" data-start="February 09, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Sacramento Kings vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        February 09, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 5:00 PM:00" data-start="February 09, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Cleveland Cavaliers vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        February 09, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 6:00 PM:00" data-start="February 09, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Memphis Grizzlies vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        February 09, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 7:00 PM:00" data-start="February 09, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Oklahoma City Thunder vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 09, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 7:00 PM:00" data-start="February 09, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Philadelphia 76ers vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        February 09, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 10, 2026 7:00 PM:00" data-start="February 09, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
