--- a/soccer.html
+++ b/soccer.html
@@ -98,104 +98,24 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">America vs Monterrey</a></td>
-<td>February 7, 2026 19:10 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:10:00 PM" data-start="February 07, 2026 07:10:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Atalanta vs Cremonese</a></td>
+<td>February 9, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 10, 2026 09:30:00 AM" data-start="February 09, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Bologna vs Parma</a></td>
-<td>February 8, 2026 03:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 03:30:00 AM" data-start="February 08, 2026 03:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Roma vs Cagliari</a></td>
+<td>February 9, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 10, 2026 11:45:00 AM" data-start="February 09, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Deportivo Alavés vs Getafe</a></td>
-<td>February 8, 2026 05:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 05:00:00 AM" data-start="February 08, 2026 05:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Middlesbrough</a></td>
+<td>February 9, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Brighton vs Crystal Palace</a></td>
-<td>February 8, 2026 06:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Lecce vs Udinese</a></td>
-<td>February 8, 2026 06:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Nice vs Monaco</a></td>
-<td>February 8, 2026 06:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Rangers vs Queen's Park</a></td>
-<td>February 8, 2026 06:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Köln vs Leipzig</a></td>
-<td>February 8, 2026 06:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:30:00 AM" data-start="February 08, 2026 06:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Athletic Club vs Levante</a></td>
-<td>February 8, 2026 07:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 07:15:00 AM" data-start="February 08, 2026 07:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Auxerre vs Paris</a></td>
-<td>February 8, 2026 08:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:15:00 AM" data-start="February 08, 2026 08:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Liverpool vs Man City</a></td>
-<td>February 8, 2026 08:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:30:00 AM" data-start="February 08, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Bayern München vs Hoffenheim</a></td>
-<td>February 8, 2026 08:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:30:00 AM" data-start="February 08, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Sassuolo vs Inter Milan</a></td>
-<td>February 8, 2026 09:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 09:00:00 AM" data-start="February 08, 2026 09:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Atlético Madrid vs Real Betis</a></td>
-<td>February 8, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 09:30:00 AM" data-start="February 08, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">PSG vs Marseille</a></td>
-<td>February 8, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 11:45:00 AM" data-start="February 08, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Juventus vs Lazio</a></td>
-<td>February 8, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 11:45:00 AM" data-start="February 08, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Valencia vs Real Madrid</a></td>
-<td>February 8, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 12:00:00 PM" data-start="February 08, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Cruzeiro vs América Mineiro</a></td>
-<td>February 8, 2026 13:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 01:00:00 PM" data-start="February 08, 2026 01:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Fluminense vs Maricá</a></td>
-<td>February 8, 2026 15:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 03:30:00 PM" data-start="February 08, 2026 03:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Vélez Sarsfield vs Boca Juniors</a></td>
-<td>February 8, 2026 17:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 09, 2026 05:15:00 PM" data-start="February 08, 2026 05:15:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Villarreal vs Espanyol</a></td>
+<td>February 9, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
