--- a/index.html
+++ b/index.html
@@ -159,15 +159,14 @@
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
 <span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
-    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
-    <br>
-    <a href="https://roxiestreams.cc/" class="nhl-link" target="_blank" rel="noopener">
+    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS &amp; JOIN THE DC
+    <br/>
+<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">
         https://roxiestreams.cc/
     </a>
-    <br/>
+<br/>
     If you’re still having issues, please try refreshing the page or using an incognito window.
 </span>
-
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
 <div class="alert alert-danger alert-dismissible mt-2" role="alert">
@@ -187,29 +186,24 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 8, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 07, 2026 00:01:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
+<td>February 9, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 09, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
-<td>February 8, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="February 09, 2026 05:00:00 AM" data-start="February 08, 2026 05:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 8, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM"></span></td>
+<td>February 9, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 8, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="February 09, 2026 09:30:00 AM" data-start="February 08, 2026 09:30:00 AM"></span></td>
+<td>February 9, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 04:00:00 PM" data-start="February 09, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/nfl-streams-1">SUPER BOWL LX (Seattle Seahawks vs New England Patriots)</a></td>
-<td>February 8, 2026 3:00 PM</td>
-<td><span class="countdown-timer" data-end="February 09, 2026 03:00:00 PM" data-start="February 08, 2026 03:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 9, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
