--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
 <span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
-    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS &amp; JOIN THE DC
+    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
     <br/>
 <a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">
         https://roxiestreams.cc/
