--- a/index.html
+++ b/index.html
@@ -186,9 +186,8 @@
 <span class="nhl-gold-text">
     PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
     <br/>
-<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">
-        [https://roxiestreams.cc/](https://roxiestreams.cc/)
-    </a>
+<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">https://roxiestreams.cc/
+</a>
 <br/>
     If you’re still having issues, please try refreshing the page or using an incognito window.
 </span>
