--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             animation: textShine 2s ease-in-out infinite alternate;
+            transition: text-shadow 0.1s ease;
+        }
+
+        .nav-link-winter-blue:hover {
+            text-shadow: 0 0 8px rgba(0, 191, 255, 0.8);
         }
 
         @keyframes textShine {
@@ -171,7 +176,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
+<li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/soccer">Soccer</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/mlb">MLB</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nba">NBA</a></li>
@@ -190,7 +195,7 @@
     PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
     <br/>
 <a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">https://roxiestreams.cc/
-</a>
+    </a>
 <br/>
     If you’re still having issues, please try refreshing the page or using an incognito window.
 </span>
