--- a/mlb.html
+++ b/mlb.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="css/mainn.css" rel="stylesheet" type="text/css"/>
 <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
 <style>
 <script>
