--- a/fighting.html
+++ b/fighting.html
@@ -100,10 +100,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
-<td>February 9, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 9, 2026 17:00:00"></span></td>
-</tr></tbody>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 10, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 10, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
+<td>February 11, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 11, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
+<td>February 13, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 13, 2026 17:00:00"></span></td>
+</tr>
+</tbody>
 </table>
 </div>
 </div>
