--- a/nba.html
+++ b/nba.html
@@ -76,8 +76,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
-
+      <li class="nav-item">
+       <a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">
+        Winter Olympics
+       </a>
+      </li>
       <li class="nav-item">
        <a class="nav-link" href="https://roxiestreams.info/soccer">
         Soccer
@@ -279,6 +282,82 @@
        </td>
        <td>
         <span class="countdown-timer" data-end="February 10, 2026 7:00 PM:00" data-start="February 09, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NBA Schedule for February 10, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Indiana Pacers vs New York Knicks
+        </a>
+       </td>
+       <td>
+        February 10, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 11, 2026 4:30 PM:00" data-start="February 10, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Los Angeles Clippers vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        February 10, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 11, 2026 5:00 PM:00" data-start="February 10, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Dallas Mavericks vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 10, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 11, 2026 6:00 PM:00" data-start="February 10, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         San Antonio Spurs vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 10, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 11, 2026 7:30 PM:00" data-start="February 10, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
