--- a/soccer.html
+++ b/soccer.html
@@ -72,8 +72,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
-
+<li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/soccer">Soccer</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/mlb">MLB</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nba">NBA</a></li>
@@ -100,24 +99,49 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Atalanta vs Cremonese</a></td>
-<td>February 9, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 10, 2026 09:30:00 AM" data-start="February 09, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Chelsea vs Leeds</a></td>
+<td>February 10, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 11:30:00 AM" data-start="February 10, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Roma vs Cagliari</a></td>
-<td>February 9, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 10, 2026 11:45:00 AM" data-start="February 09, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Everton vs Bournemouth</a></td>
+<td>February 10, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 11:30:00 AM" data-start="February 10, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Middlesbrough</a></td>
-<td>February 9, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Tottenham vs Newcastle</a></td>
+<td>February 10, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 11:30:00 AM" data-start="February 10, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Villarreal vs Espanyol</a></td>
-<td>February 9, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Napoli vs Como</a></td>
+<td>February 10, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 12:00:00 PM" data-start="February 10, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">West Ham United vs Manchester United</a></td>
+<td>February 10, 2026 12:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 12:15:00 PM" data-start="February 10, 2026 12:15:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Deportivo Táchira vs The Strongest</a></td>
+<td>February 10, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 04:30:00 PM" data-start="February 10, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Vitória vs Flamengo</a></td>
+<td>February 10, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 04:30:00 PM" data-start="February 10, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Pumas UNAM vs San Diego</a></td>
+<td>February 10, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 05:00:00 PM" data-start="February 10, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Tigres UANL vs Forge</a></td>
+<td>February 10, 2026 7:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 11, 2026 07:00:00 PM" data-start="February 10, 2026 07:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
