--- a/index.html
+++ b/index.html
@@ -218,23 +218,23 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 9, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 09, 2026 00:01:00 AM"></span></td>
+<td>February 10, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 10, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
-<td>February 9, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
+<td>February 10, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 10, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 9, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 04:00:00 PM" data-start="February 09, 2026 04:00:00 PM"></span></td>
+<td>February 10, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 04:00:00 PM" data-start="February 10, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
-<td>February 9, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 10, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 10, 2026 05:00:00 PM"></span></td>
 </tr>
 </tbody>
 </table>
