--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -103,7 +103,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sportv.m3u8', 'daffodil'))">Stream 1</button>
 <button class="streambutton"
   onclick="showPlayer('clappr', 'https://d358zjutf6reju.cloudfront.net/57c212bf-d317-49ed-8d72-bb9dadb882a7/manifest.m3u8')">Stream 2</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('epl.m3u8', '601'))">Stream 3</button>
@@ -124,7 +124,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = 'daffodil';  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -132,13 +132,13 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('sportv.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = '601') {
+function getRandomStream(streamPath, subdomain = 'daffodil') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
