--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
 <span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
-    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
+    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS &amp; JOIN THE DC
     <br/>
 <a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">https://roxiestreams.cc/
     </a>
@@ -218,23 +218,23 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 10, 2026</td>
+<td>February 11, 2026</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 10, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 10, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 10, 2026 12:00:00 PM"></span></td>
+<td>February 11, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 12, 2026 12:00:00 PM" data-start="February 11, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 10, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 04:00:00 PM" data-start="February 10, 2026 04:00:00 PM"></span></td>
+<td>February 11, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 12, 2026 04:00:00 PM" data-start="February 11, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
-<td>February 10, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 10, 2026 05:00:00 PM"></span></td>
+<td>February 11, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 12, 2026 05:00:00 PM" data-start="February 11, 2026 05:00:00 PM"></span></td>
 </tr>
 </tbody>
 </table>
