--- a/nba.html
+++ b/nba.html
@@ -203,6 +203,222 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 11, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Atlanta Hawks vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:00 PM:00" data-start="February 11, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Washington Wizards vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:00 PM:00" data-start="February 11, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Milwaukee Bucks vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:00 PM:00" data-start="February 11, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Chicago Bulls vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:30 PM:00" data-start="February 11, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Indiana Pacers vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:30 PM:00" data-start="February 11, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         New York Knicks vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:30 PM:00" data-start="February 11, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Detroit Pistons vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        February 11, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 4:30 PM:00" data-start="February 11, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Los Angeles Clippers vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        February 11, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 5:00 PM:00" data-start="February 11, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Portland Trail Blazers vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        February 11, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 5:00 PM:00" data-start="February 11, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Miami Heat vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        February 11, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 5:00 PM:00" data-start="February 11, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-11">
+         Oklahoma City Thunder vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 11, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 6:00 PM:00" data-start="February 11, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-12">
+         Sacramento Kings vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        February 11, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 6:00 PM:00" data-start="February 11, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-13">
+         Memphis Grizzlies vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        February 11, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 6:00 PM:00" data-start="February 11, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-14">
+         San Antonio Spurs vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        February 11, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 12, 2026 7:00 PM:00" data-start="February 11, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
