--- a/motorsports.html
+++ b/motorsports.html
@@ -99,13 +99,18 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Glendale - Qualifying</a></td>
-<td>February 07, 2026 10:00 AM</td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Qualifying</a></td>
+<td>February 11, 2026 17:15 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 10:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Glendale - Heats & Race</a></td>
-<td>February 07, 2026 16:00 PM</td>
+<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
+<td>February 12, 2026 04:00 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 16:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
+<td>February 13, 2026 04:00 AM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 16:00:00"></span>
 </td>
 <tr>
