--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 11, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 12, 2026 12:00:00 PM" data-start="February 11, 2026 12:00:00 PM"></span></td>
+<td>February 11, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
@@ -232,9 +232,14 @@
 <td><span class="countdown-timer" data-end="February 12, 2026 04:00:00 PM" data-start="February 11, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
 <td>February 11, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 12, 2026 05:00:00 PM" data-start="February 11, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/f1">Formula 1 [LAST HOUR]</a></td>
+<td>February 12, 2026 4:00 AM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 04:00:00 AM" data-start="February 12, 2026 04:00:00 AM"></span></td>
 </tr>
 </tbody>
 </table>
