--- a/motorsports.html
+++ b/motorsports.html
@@ -72,8 +72,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
-
+<li class="nav-item"><a class="nav-link nav-link-winter-blue" href="https://roxiestreams.info/olympics">Winter Olympics</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/soccer">Soccer</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/mlb">MLB</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nba">NBA</a></li>
@@ -101,20 +100,20 @@
 <tr>
 <td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Qualifying</a></td>
 <td>February 11, 2026 17:15 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 10:00:00"></span>
+<td><span class="countdown-timer" data-end="February 12, 2026 05:15:00" data-start="February 11, 2026 17:15:00"></span>
 </td>
 <tr>
 <td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
 <td>February 12, 2026 04:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 16:00:00"></span>
+<td><span class="countdown-timer" data-end="February 12, 2026 16:00:00" data-start="February 12, 2026 04:00:00"></span>
 </td>
 <tr>
 <td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
 <td>February 13, 2026 04:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 16:00:00"></span>
+<td><span class="countdown-timer" data-end="February 13, 2026 16:00:00" data-start="February 13, 2026 04:00:00"></span>
 </td>
 <tr>
-</tbody>
+</tr></tr></tr></tr></tbody>
 </table>
 </div>
 </div>
@@ -125,7 +124,6 @@
 <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
 </footer>
 <script src="js/bootstrap.bundle.min.js">
-    
 </script>
 <script>
         function startCountdown() {
