--- a/nfl-streams-14.html
+++ b/nfl-streams-14.html
@@ -130,7 +130,7 @@ var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domains.txt')
+fetch('domainsa.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -138,7 +138,7 @@ fetch('domains.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('nfl14.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domains.txt');
+    console.error('Failed to load domainsa.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
