--- a/aew.html
+++ b/aew.html
@@ -132,7 +132,7 @@ fetch('domainsa.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('aew.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domains.txt');
+    console.error('Failed to load domainsa.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
