--- a/index.html
+++ b/index.html
@@ -194,15 +194,12 @@
 <span class="nhl-gold-text">
     PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS &amp; JOIN THE DC
     <br/>
-<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">https://roxiestreams.cc/
-    </a>
+<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">
+roxiestreams.cc Status page: roxiestreams.cc or https://rentry.co/roxiestreams0
+</a>
 <br/>
-    If you’re still having issues, please try refreshing the page or using an incognito window.
+    If you’re having issues with streams, please try refreshing the page or using an incognito window.
 </span>
-<button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
-</div>
-<div class="alert alert-danger alert-dismissible mt-2" role="alert">
-        We now have a Discord server. Enjoy! <a class="alert-link" href="https://discord.gg/JhkVmejRmn">Discord</a>
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
 <div class="mt-5">
